<resources>
    <string name="app_name">Application de PFE</string>


    <!-- foo -->
    <string name="project_tab">Projets</string>
    <string name="jury_tab">Juries</string>
    <string name="marks_tab">Notes</string>
    <string name="settings_tab">Paramètres</string>

    <!-- foo -->
    <string name="jpo_project_tab">JPO Projets</string>
    <string name="jpo_jury_tab">JPO Juries</string>
    <string name="jpo_marks_tab">JPO Notes</string>


    <!-- Welcome page -->
    <string name="welcome_visitor">Visiteur </string>
    <string name="welcome_login"> Se connecter </string>
    <string name="title_activity_jury">Jury</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- TestActivity -->
    <string name="current_user_url_label">current_user_url</string>
    <string name="current_user_url_value">[current_user_url]</string>

    <string name="current_user_authorizations_html_url_label">current_user_authorizations_html_url</string>
    <string name="current_user_authorizations_html_url_value">[current_user_authorizations_html_url]</string>

    <string name="authorizations_url_label">authorizations_url</string>
    <string name="authorizations_url_value">[authorizations_url]</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="test_dashboard_button_value">Go to dashboard</string>


    <!--WelcomeActivity-->
    <string name="login_as_user">Connexion</string>
    <string name="login_as_visitor">Visiteur</string>
    <string name="welcome_message">Bienvenue ! \nCette application est destinée à la notation des posters des PFE à l’ESEO.</string>


    <!--LoginActivity-->
    <string name="prompt_login">Identifiant</string>
    <string name="prompt_password">Mot de Passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Cet identifiant n\'est pas valide, il doit faire au moins 8 caractères</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champs est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test_login">Connexion</string>
    <string name="visitor_sign_in">Je suis un visiteur</string>

    <!-- Strings relatedactivity_loginogin -->
    <string name="prompt_email">Email</string>


    <!-- Projects Cards -->
    <string name="project_cards_supervisor_label">Superviseur :</string>
    <string name="confidentialitytextViewLabel">Confidentialité : </string>
    <string name="title_activity_rate_student">RateStudentActivity</string>
    <string name="title_activity_dislay_poster">DislayPosterActivity</string>
    <string name="title_activity_take_notes_project">TakeNotesProjectActivity</string>


    <!--activity_detail_project-->
    <string name="afficher_le_poster">Afficher le poster</string>
    <string name="description">Description</string>
    <string name="textviewdescription">[textViewDescription]</string>
    <string name="supervisor">Supervisor :</string>
    <string name="textviewsupervisorvalue">[textViewSupervisorValue]</string>
    <string name="liste_d_etudiants">Liste d\'étudiants :</string>
    <string name="jury_le">Jury du :</string>
    <string name="ajouter_une_alarme_pour_ce_jury">Ajouter une alarme pour ce jury</string>
    <string name="liste_des_juries">Liste des juries :</string>
    <string name="liste_des_projects">Liste des projects :</string>
    <string name="noter_le_project">Noter le project</string>
    <string name="noter_le_projet">Noter le projet</string>

    <!--JPOJuryActivity-->
    <string name="add_jpo_jury">Ajouter un jurie</string>
    <string name="add_jpo_jury_button_validation">Valider</string>
    <string name="jpo_jury_forename">Prénom</string>
    <string name="jpo_jury_surname">Nom</string>
    <string name="jpo_jury_1">Jurie 1</string>
    <string name="jpo_jury_2">Jurie 2</string>
    <string name="surnametextViewLabel">Nom</string>
    <string name="forenametextViewLabel">Prénom</string>


</resources>
