<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.eseo.dis.hubertpa.pfe_application.testActivities.Test">

    <TextView
        android:id="@+id/current_user_url_label"
        android:layout_width="148dp"
        android:layout_height="39dp"
        android:text="@string/current_user_url_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_user_url_value"
        android:layout_width="264dp"
        android:layout_height="39dp"
        android:text="@string/current_user_url_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/current_user_url_label"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/current_user_authorizations_html_url_label"
        android:layout_width="148dp"
        android:layout_height="37dp"
        android:text="@string/current_user_authorizations_html_url_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_user_url_label" />

    <TextView
        android:id="@+id/current_user_authorizations_html_url_value"
        android:layout_width="263dp"
        android:layout_height="37dp"
        android:text="@string/current_user_authorizations_html_url_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/current_user_authorizations_html_url_label"
        app:layout_constraintTop_toBottomOf="@+id/current_user_url_value" />

    <TextView
        android:id="@+id/authorizations_url_label"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:text="@string/authorizations_url_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_user_authorizations_html_url_label" />

    <TextView
        android:id="@+id/authorizations_url_value"
        android:layout_width="263dp"
        android:layout_height="34dp"
        android:text="@string/authorizations_url_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/authorizations_url_label"
        app:layout_constraintTop_toBottomOf="@+id/current_user_authorizations_html_url_value" />

    <Button
        android:id="@+id/button_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:text="@string/test_dashboard_button_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorizations_url_label"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/token_value"
        android:layout_width="410dp"
        android:layout_height="88dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/authorizations_url_label"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
