<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="fr.eseo.dis.hubertpa.pfe_application.activities.WelcomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="165dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/eseo_groupe" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="294dp"
        android:layout_height="59dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/not_filled_rounded_button"
        android:text="@string/login_as_user"
        android:textColor="@color/not_filled_rounded_button"
        app:layout_constraintBottom_toTopOf="@+id/button_visitor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_visitor"
        android:layout_width="294dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/filled_rounded_button"
        android:elevation="0dp"
        android:textColor="@color/filled_rounded_button"
        android:text="@string/login_as_visitor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="243dp"
        android:layout_height="77dp"
        android:layout_marginEnd="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="72dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>
