<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    android:padding="6dp"
    tools:context="fr.eseo.dis.hubertpa.pfe_application.activities.DetailJuryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom_red_eseo"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewiDJury"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="[textViewiDJury]"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textViewDateLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jury_le" />

            <TextView
                android:id="@+id/textViewDateValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="[textViewDateValue]"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/setAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/border_rounded_red_eseo"
                android:padding="2dp"
                android:text="@string/ajouter_une_alarme_pour_ce_jury" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/border_rounded_grey_eseo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewProjectsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="0dp"
                android:text="@string/liste_des_juries"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <ListView
                android:id="@+id/textViewListMembersValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/grey_button"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewListProjectsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginBottom="0dp"
                android:text="@string/liste_des_projects"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <ListView
                android:id="@+id/textViewListProjectsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
